Update open and closed melds

--- a/MahjongScorer.csproj
+++ b/MahjongScorer.csproj
@@ -3,6 +3,7 @@
         <OutputType>Library</OutputType>
         <TargetFramework>net6.0</TargetFramework>
         <LangVersion>latest</LangVersion>
+        <RootNamespace>MahjongScorer</RootNamespace>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
     </PropertyGroup>
