--- a/MahjongScorer.csproj
+++ b/MahjongScorer.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
         <TargetFramework>net7.0</TargetFramework>
-        <OutputType>Library</OutputType>
+        <OutputType>Exe</OutputType>
         <LangVersion>latest</LangVersion>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
@@ -9,10 +9,10 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.NET.Test.Sdk"
-            Version="17.4.0" />
+            Version="17.5.0" />
         <PackageReference Include="NUnit"
             Version="3.13.3" />
         <PackageReference Include="NUnit3TestAdapter"
-            Version="4.3.1" />
+            Version="4.4.2" />
     </ItemGroup>
 </Project>
