--- a/.editorconfig
+++ b/.editorconfig
@@ -4,11 +4,14 @@ root = true
 
 [*]
 indent_style = space
-indent_size = 2
+indent_size = 4
 end_of_line = lf
 charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
+
+[*.{md,json,yml}]
+indent_size = 2
 
 [*.cs]
 csharp_new_line_before_open_brace = none
