Reformat and update dependencies

--- a/.editorconfig
+++ b/.editorconfig
@@ -18,6 +18,7 @@ csharp_new_line_before_open_brace = none
 csharp_new_line_before_else = false
 csharp_new_line_before_catch = false
 csharp_new_line_before_finally = false
+csharp_indent_switch_labels = false
 
 dotnet_naming_symbols.interface.applicable_kinds = interface
 dotnet_naming_symbols.interface.applicable_accessibilities = *
